--- a/molecule/docker/converge.yml
+++ b/molecule/docker/converge.yml
@@ -1,10 +1,10 @@
 ---
-- name: Converge
-  hosts: all
-  collections:
-    - nginxinc.nginx_core
-  roles:
-    - role: nginx
+# - name: Converge
+#   hosts: all
+#   collections:
+#     - nginxinc.nginx_core
+#   roles:
+#     - role: nginx
 
-- import_playbook: devops.test.main
+- import_playbook: provenvelocity.devops_test.main
 
