--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,6 +5,10 @@
 #     - nginxinc.nginx_core
 #   roles:
 #     - role: nginx
-    
-- import_playbook: provenvelocity.devops_test.main
 
+- import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx.yml
+# - import_playbook: provenvelocity.devops_test.main
+# - import_playbook: provenvelocity.devops_test.main.yml
+# - import_playbook: "provenvelocity.devops_test.main"
+# - import_playbook: "provenvelocity.devops_test.main.yml"
+# - import_playbook: "provenvelocity.devops_test.playbooks.main.yml"
