--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,7 +6,12 @@
 #   roles:
 #     - role: nginx
 
+#External Collections
 - import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx.yml
+#- import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx
+#- import_playbook: nginxinc.nginx_core.deploy-nginx
+
+#Current Collection
 # - import_playbook: provenvelocity.devops_test.main
 # - import_playbook: provenvelocity.devops_test.main.yml
 # - import_playbook: "provenvelocity.devops_test.main"
