exsample of ENV not beening respected in

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,14 +1,14 @@
 ---
-# - name: Converge
-#   hosts: all
-#   become: true
-#   collections:
-#     - nginxinc.nginx_core
-#   roles:
-#     - role: nginx
+- name: Converge
+  hosts: all
+  become: true
+  collections:
+    - nginxinc.nginx_core
+  roles:
+    - role: nginx
 
 #External Collections
-- import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx.yml
+#- import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx.yml
 #- import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx
 #- import_playbook: nginxinc.nginx_core.deploy-nginx
 
