--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -25,10 +25,10 @@ provisioner:
     defaults:
       timeout: 30
       system_warinings: false
-      #collections-path: ./.cache/collections
+      collections-path: ./.cache/collections
       #roles-path: ./.cache/roles
-    #env:
-      #ANSIBLE_COLLECTIONS_PATH: ./.cache/collections
+    env:
+      ANSIBLE_COLLECTIONS_PATH: ./.cache/collections
 verifier:
   name: ansible
 # verifier:
