--- a/molecule/docker/converge.yml
+++ b/molecule/docker/converge.yml
@@ -1,12 +1,12 @@
 ---
-# - name: Converge
-#   hosts: all
-#   collections:
-#     - nginxinc.nginx_core
-#   roles:
-#     - role: nginx
+- name: Converge
+  hosts: all
+  collections:
+    - nginxinc.nginx_core
+  roles:
+    - role: nginx
 
-- import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx.yml
+# - import_playbook: nginxinc.nginx_core.playbooks.deploy-nginx.yml
 # - import_playbook: provenvelocity.devops_test.main
 # - import_playbook: provenvelocity.devops_test.main.yml
 # - import_playbook: "provenvelocity.devops_test.main"
